--- a/qreport.Rmd
+++ b/qreport.Rmd
@@ -375,6 +375,67 @@ desi_combi
 * Commonwealth is the most desired brand in the market, closely followed by ING. 
 * It is an important advantage that ING is not considered as expensive. 
 
+
+### Desirability over time
+```{r Australia desi over time, echo=F, eval=T, fig.align='left', fig.width=8}
+## over time desirability per brand
+desi_time <- data %>%
+  dplyr::select(country, quarter_measurement, desirability, labels_quarters, label) %>%
+  dplyr::filter(country==1) %>%
+  dplyr::mutate(
+    desirability = desirability *100
+  ) %>%
+  distinct() %>%
+  # Gather across brands
+  tidyr::spread(label, desirability) 
+
+xaxis <- list(title = "",
+              textfont = list(color = 'rgb(105, 105, 105)', size = 12, family = "ING me"),
+              #range =c(20:90),
+              #dtick = 10,
+              showline = TRUE,
+              showgrid = TRUE,
+              linecolor = 'rgb(204, 204, 204)',
+              linewidth = 2,
+              tickfont = list(family = "ING me",
+                              size = 12,
+                              color = 'rgb(105, 105, 105)'))
+yaxis <- list(title = "",
+              range =c(0:100),
+              showticklabels = TRUE,
+              linecolor = 'rgb(204, 204, 204)',
+              linewidth = 2,
+             # autotick = TRUE,
+             # dtick = 10,
+              ticks = 'inside',
+              tickcolor = 'rgb(204, 204, 204)',
+             # tickwidth = 1,
+             # ticklen = 10,
+              tickfont = list(family = "ING me",
+                              size = 12,
+                              color = 'rgb(105, 105, 105)'))
+
+desi_timep1 <-desi_time %>%
+  plot_ly(x = ~labels_quarters) %>%
+  add_lines(y = ~ING, type='scatter', name='ING',
+            line = list(color = 'rgb(255,098,000)', type='scatter', width = 4, mode = 'lines+markers')) %>%
+  add_lines(y =~ANZ, type='scatter', name='ANZ',
+            line = list(color = 'rgb(96,166,218)', width = 4, mode = 'lines+markers')) %>%
+  add_lines(y =~`Commonwealth Bank`, type='scatter', name='Commonwealth Bank',
+            line = list(color = 'rgb(171,0,102)', width = 4, mode = 'lines+markers')) %>%
+  add_lines(y =~NAB, type='scatter', name='NAB',
+            line = list(color = 'rgb(208,217,60)', width = 4, mode = 'lines+markers')) %>%
+  add_lines(y =~Westpac, type='scatter', name='Westpac',
+            line = list(color = 'rgb(52,150,81)', width = 4, mode = 'lines+markers')) %>%
+  layout(title = "",
+         xaxis = xaxis,
+         yaxis = yaxis)
+desi_timep1
+```
+
+
+* Where other brand have shown a declining trend over time, ING has managed to show a positive development since Q4 2014. 
+
 ### Reputation
 ```{r Australia pulse, echo=F, eval=T, fig.align='left', fig.width=8}
 rep_brand <- data %>%
@@ -540,8 +601,133 @@ p1
 ```
 
 
-### Customer 
+### Customer
 
+```{r Australia customer, echo=F, eval=T, message=F, error=F, warning=F, fig.align='left', fig.width=6.5}
+
+customerthing <- data_customer_fig %>%
+  dplyr::select(labels_quarters, country, b_value, "Active customers", "Primary bank customers", 
+                "Avg number of product categories per active customer") %>%
+  dplyr::filter(b_value ==1 & labels_quarters %in% c("2018 Q3", "2018 Q4", "2019 Q1", "2019 Q2", "2019 Q3", "2019 Q4") & country ==1) %>%
+  dplyr::distinct() %>%
+  dplyr::arrange(country)
+
+customerthing <- customerthing %>%
+  dplyr::mutate(
+    Diff_year = 1,  
+    Diff_growth = customerthing$'Primary bank customers' - lag(customerthing$'Primary bank customers'), 
+    Rate_percent = (Diff_growth / Diff_year)/ customerthing$'Primary bank customers' * 100
+  )
+
+
+x<- c("Q3_2018", "Q4_2018", "Q1_2019", "Q2_2019", "Q3_2019", "Q4_2019")
+
+xaxis <- list(title = "",
+              showline = TRUE,
+              showgrid = FALSE,
+              showticklabels = TRUE,
+              linecolor = 'rgb(204, 204, 204)',
+              linewidth = 2,
+              autotick = FALSE,
+              ticks = 'inside',
+              tickcolor = 'rgb(204, 204, 204)',
+              tickwidth = 2,
+              ticklen = 5,
+              categoryarray = c("Q3_2018", "Q4_2018", "Q1_2019", "Q2_2019", "Q3_2019", "Q4_2019"),
+              tickfont = list(family = "ING me",
+                              size = 12,
+                              color = 'rgb(105, 105, 105)'))
+yaxis <- list(title = "Primary customer *1000",
+              showline = TRUE,
+              showgrid = FALSE,
+              range =c(100.000:2000.000),
+              showticklabels = TRUE,
+              linecolor = 'rgb(204, 204, 204)',
+              linewidth = 2,
+              autotick = FALSE,
+              dtick = 50.000,
+              ticks = 'inside',
+              tickcolor = 'rgb(204, 204, 204)',
+              tickwidth = 1,
+              ticklen = 1,
+              tickfont = list(family = "ING me",
+                              size = 12,
+                              color = 'rgb(105, 105, 105)'))
+              
+p1 <- plot_ly(customerthing, x = ~x, y = ~customerthing$'Primary bank customers', 
+              type = 'bar', name = '', marker = list(color = 'rgb(82,81,153)')) %>%
+ #add_lines(y = ~Rate_percent, name = 'growth', marker = list(color = "rgb 168, 168, 168")) %>%
+  layout(xaxis = xaxis,
+         yaxis = yaxis,
+         barmode = 'group', title= "Primary customers",
+         legend =list(family = "ING me",
+                      size = 12,
+                      color = 'rgb(105, 105, 105)'))
+p1
+
+```
+
+
+* Australia showed a positive trend in their amount of primary customers. 
+
+
+```{r Australia avg products, echo=F, eval=T, message=F, error=F, warning=F, fig.align='left', fig.width=6.5}
+
+customerthing <- data_customer_fig %>%
+  dplyr::select(labels_quarters, country, b_value, "Active customers", "Primary bank customers", 
+                "Avg number of product categories per active customer") %>%
+  dplyr::filter(b_value ==1 & labels_quarters %in% c("2018 Q3", "2018 Q4", "2019 Q1", "2019 Q2", "2019 Q3", "2019 Q4") & country ==1) %>%
+  dplyr::distinct() %>%
+  dplyr::arrange(country)
+
+xaxis <- list(title = "",
+              showline = TRUE,
+              showgrid = FALSE,
+              showticklabels = TRUE,
+              linecolor = 'rgb(204, 204, 204)',
+              linewidth = 2,
+              autotick = FALSE,
+              ticks = 'inside',
+              tickcolor = 'rgb(204, 204, 204)',
+              tickwidth = 2,
+              ticklen = 5,
+              categoryarray = c("Q3_2018", "Q4_2018", "Q1_2019", "Q2_2019", "Q3_2019", "Q4_2019"),
+              tickfont = list(family = "ING me",
+                              size = 12,
+                              color = 'rgb(105, 105, 105)'))
+yaxis <- list(title = "",
+              showline = TRUE,
+              showgrid = TRUE,
+              range =c(1:2),
+              showticklabels = TRUE,
+              linecolor = 'rgb(204, 204, 204)',
+              linewidth = 2,
+              autotick = TRUE,
+              #dtick = 0.01,
+              ticks = 'inside',
+              tickcolor = 'rgb(204, 204, 204)',
+              tickwidth = 1,
+              #ticklen = 5,
+              tickfont = list(family = "ING me",
+                              size = 12,
+                              color = 'rgb(105, 105, 105)'))
+              
+p2 <- plot_ly(customerthing, x = ~x, y = ~customerthing$"Avg number of product categories per active customer", 
+              type = 'bar', name = '', marker = list(color = 'rgb(82,81,153)')) %>%
+ #add_lines(y = ~Rate_percent, name = 'growth', marker = list(color = "rgb 168, 168, 168")) %>%
+  layout(xaxis = xaxis,
+         yaxis = yaxis,
+         #margin = list(b = 100),
+         barmode = 'group', title= "Average # products",
+         legend =list(family = "ING me",
+                      size = 12,
+                      color = 'rgb(105, 105, 105)'))
+p2
+
+```
+
+
+* Australia has shown a positive development in their average amount of products since Q3 2018. 
 
 
 
